--- a/src/styles/modules/category-breakdown.css
+++ b/src/styles/modules/category-breakdown.css
@@ -29,7 +29,7 @@
 
 .category-breakdown-body {
   margin-top: 0;
-  margin-bottom: -0.75rem;
+  margin-bottom: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
